public/stylesheets/app.css
/* ... */
.tabbedGroup {
    display: flex;
    justify-content: flex-end;
    padding: 10px 10px 0px 10px;
}

.tabbedLink {
    border-bottom: 0;
    border-radius: 5px 5px 0 0;
    padding: 10px;
    margin: 0 5px;
    color: #8A715B;

    background-color: #fae5ca;
    font-size: 15px;
}

.tabbedLink:hover {
    cursor: pointer;
}

/* #incomplete:hover + #complete {
    background-color: #8A715B;
    color: cornsilk;
} */

#complete:hover + #incomplete {
    background-color: #8A715B;
    color: cornsilk;
}


/* %%%%%%%%%%%%%%%%%%%%% MAIN: Task area %%%%%%%%%%%%%%%%%%%%% */
.mainContainer {
    grid-area: main;
    background-color: #fae5ca;
    /* display: flex;
    justify-content: flex-start; */
}

.my-tasks {
    /* margin-left: 215px; */
    background-color: white;
    color: #8A715B;
}

.my-tasks h1 {
    padding: 15px;
    margin: 0px;
    border-top: 1px solid #C7A383;
    border-bottom: 1px dotted #C7A383;
    color: #8A715B;
    font-size: 25px;
    /* margin: 15px 0px 0px 0px; */
}

.taskContainer {
    padding: 15px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    background-color: #fae5ca;
    border-radius: 10px 10px 0 0;
}

.taskSubContainer {
    padding: 10px 0px 10px 0px;
    display: flex;
    align-items: center;
    background-color: #fae5ca;
}

.descripLabel, .dueDateLabel, .isCompletedLabel, .contactsLabel, .listLabel {
    padding: 5px;
    font-size: 13px;
    font-weight: bold;
    width: fit-content;
    color: #8A715B;
    background-color: #fae5ca;
}

#description, #dueDate, #givenTo, #title {
    background-color: #faedd9;
}

.descrip {
    width: 100%;
    border-radius: 10px;
    font-size: 15px;
    padding: 7px;
    height: 50px;
    border: 2px solid #8A715B;
}

#givenTo, #title {
    border-radius: 10px;
    font-size: 13px;
    padding: 5px;
    height: 30px;
    border: 1px solid #8A715B;
    color: #8A715B;
}

.dueDate, .createTaskButton {
    border-radius: 10px;
    font-size: 13px;
    padding: 5px;
    height: 30px;
    border: 1px solid #8A715B;
    color: #8A715B;
}

.createTaskButton {
    margin-left: 2px;
    background-color: #E0A979;
    border: none;
    box-shadow: -2.5px 2.5px #8A715B;
}

.createTaskButton:active {
    /* transform: scale(0.98); */
    box-shadow: inset 0 0 5px #8A715B;
}

/* #dueDate {
    width: fit-content !important;
} */

/*
.createTaskButton {
    padding: 15px;
} */



/* %%%%%%%%%%%%%%%%%%%%% Right sidebar: Individual task container/edit pop-up %%%%%%%%%%%%%%%%%%%%% */
.fiona {
    width: 100%;
}

/* Contains the (x, edit, delete buttons) + (task info) + (comments)  */
.task-container {
    margin: 20px 10px 20px 10px;
    padding: 15px;
    border-radius: 25px;
    background-color: #fae5ca;
    border: 1px solid #8A715B;
    font-size: 15px;
    min-height: 500px;
    min-width: 275px;

    color: #8A715B;
}

/* Contains the x, edit, delete buttons  */
.task-info-buttons {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 5px;
}

/* Task (x + edit + delete task) buttons  */
.task-butts {
    border: 1px solid #8A715B;
    font-size: 12px;
    padding: 5px;
    border-radius: 5px;

    color: #8A715B;
    background-color: #faedd9;
}

/* X button  */
#task-info-x {
    font-weight: bold;
    width: 19px;
    padding: 0 0 2px 0;
}

/* .task-information-container {
    display: flex;
    flex-direction: column;
    align-items: space-between;
} */

/* Task description (header of task pop-up)  */
.task-info-header {
    font-weight: bold;
    font-size: 20px;
    margin: 10px 0 10px 0;
    background-color: #fae5ca;
}

.task-completed-container, .due-container {
    display: flex;
    align-items: center;
    margin: 5px 5px 5px 0;
}

/* Task completed + Due + Comments  */
.task-completed-label, .due-container-label, .comment-header {
    border: 1px solid #8A715B;
    background-color: #8A715B;
    color: #fae5ca;
    font-size: 12px;
    padding: 4px;
    border-radius: 5px;
    width: fit-content;
    margin: 0;
    display: inline-block;
    /* align-items: center; */
}

.completedTask {
    margin: 5px;
}

.due-container {
    display: flex;
    flex-direction: row;
}

.due-container-content {
    height: fit-content;
    font-size: 14px;
    margin: 5px;
    background-color: #fae5ca;
}

/* Comments section header  */
.comment-header {
    margin: 0 5px 5px 0;
}

/* Enter new comment field  */
.create-comment {
    margin: 5px 0 5px 0px;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    background-color: #fae5ca;
}

.add-comment-field {
    border: 1px solid #8A715B;
    font-size: 12px;
    padding: 3px;
    border-radius: 5px;
    width: 100%;
    padding: 5px;

    color: #C7A383;
    background-color: #faedd9;
}

/* ::placeholder {
    color: #C7A383
} */

.add-comment-butt {
    border: 1px solid #8A715B;
    font-size: 12px;
    padding: 3px;
    border-radius: 5px;
    margin: 3px 0 3px 3px;

    color: #8A715B;
    background-color: #faedd9;
}

.add-comment-butt:hover {
    background-color: #8A715B;
    color: #fae5ca;
}

.add-comment-butt:hover {
    box-shadow: inset 0 0 3px #6d5947;
}

/* Populated comments container  */
.comment-container {
    display: flex;
    justify-content: space-between;
    flex-direction: column;

    border: 1px solid #9fcf88;
    border-radius: 10px;
    padding: 3px;
    margin: 5px 0;
}

.updated-At {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin: 4px 0 1px 6px;
    /* text-align: center; */
}

.comment-date {
    display: flex;
    justify-content: center;
    font-size: 12.5px;
    padding-top: 1px;
    margin-right: 3px;
}

/* Comments: edit + delete button container  */
.comment-buttons {
    display: flex;
    justify-content: center;
}

/* Comments: class of each edit and delete buttons  */
.comment-butts {
    display: none;
    border: none;
    padding: 0 3px;
    font-size: 12px;

    color: #8A715B;
}
/* ... */

